--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileScreen"></activity>
+        <activity android:name=".GroupScreen"></activity>
+        <activity android:name=".ProfileScreen" />
         <activity android:name=".MenuScreen" />
         <activity android:name=".MainActivity">
             <intent-filter>
