--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SettingsScreen"></activity>
+        <activity android:name=".ARViewScreen"></activity>
+        <activity android:name=".TourModeScreen" />
+        <activity android:name=".SettingsScreen" />
         <activity android:name=".GroupScreen" />
         <activity android:name=".ProfileScreen" />
         <activity android:name=".MenuScreen" />
